# serializer version: 1
# name: TestFlattenedContainer.test_indirect_flatten_symbol_tree[indirect_flatten_symbol_tree]
  dict({
    'children': dict({
      'Content': dict({
        'strict_super': tuple(
        ),
      }),
      'DeBruijnIndex0': dict({
        'strict_super': tuple(
        ),
      }),
      'DeBruijnIndex1': dict({
        'strict_super': tuple(
        ),
      }),
      'DeBruijnIndex2': dict({
        'strict_super': tuple(
        ),
      }),
      'DeBruijnIndex3': dict({
        'strict_super': tuple(
        ),
      }),
      'IndirectOnly': dict({
        'strict_super': tuple(
        ),
      }),
    }),
    'strict_super': tuple(
      'multi_module_composition.Library.Wrapper.AltTypes.Container',
    ),
  })
# ---
# name: TestFlattenedContainer.test_types_symbol_tree[types_symbol_tree]
  dict({
    'children': dict({
      'Container': dict({
        'children': dict({
          'Content': dict({
            'strict_super': tuple(
              'multi_module_composition.Library.Types.Value',
            ),
          }),
          'DeBruijnIndex0': dict({
            'strict_super': '<cycle>',
          }),
          'DeBruijnIndex1': dict({
            'strict_super': '<cycle>',
          }),
          'DeBruijnIndex2': dict({
            'strict_super': '<cycle>',
          }),
          'DeBruijnIndex3': dict({
            'strict_super': '<cycle>',
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Value': dict({
        'strict_super': tuple(
        ),
      }),
    }),
    'strict_super': tuple(
    ),
  })
# ---
# name: TestMergedValueOverride.test_merged_root_symbol_tree[merged_root_symbol_tree]
  dict({
    'children': dict({
      'Foo': dict({
        'children': dict({
          'Bar': dict({
            'strict_super': tuple(
              'multi_module_composition.MergedRoot.Foo.Value',
            ),
          }),
          'Value': dict({
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Merged': dict({
        'children': dict({
          'Bar': dict({
            'strict_super': tuple(
            ),
          }),
          'Value': dict({
            'strict_super': tuple(
            ),
          }),
          'Value2': dict({
            'strict_super': tuple(
            ),
          }),
          'Value3': dict({
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
          'multi_module_composition.MergedRoot.Foo',
          'multi_module_composition.MergedRoot.Nested.Baz',
          'multi_module_composition.MergedRoot.Qux',
        ),
      }),
      'Nested': dict({
        'children': dict({
          'Baz': dict({
            'children': dict({
              'Bar': dict({
                'strict_super': tuple(
                ),
              }),
              'Value': dict({
                'strict_super': tuple(
                  'multi_module_composition.MergedRoot.Nested.Baz.Value2',
                ),
              }),
              'Value2': dict({
                'strict_super': tuple(
                ),
              }),
            }),
            'strict_super': tuple(
              'multi_module_composition.MergedRoot.Foo',
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Qux': dict({
        'children': dict({
          'Bar': dict({
            'strict_super': tuple(
            ),
          }),
          'Value': dict({
            'strict_super': tuple(
              'multi_module_composition.MergedRoot.Qux.Value3',
            ),
          }),
          'Value3': dict({
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
          'multi_module_composition.MergedRoot.Foo',
        ),
      }),
    }),
    'strict_super': tuple(
    ),
  })
# ---
# name: TestMultiModuleCompositionDiamond.test_module3_diamond_symbol_tree[module3_diamond_symbol_tree]
  dict({
    'children': dict({
      'Class1': dict({
        'strict_super': tuple(
        ),
      }),
      'Class2': dict({
        'strict_super': tuple(
        ),
      }),
      'Nested1': dict({
        'children': dict({
          'Class3': dict({
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Nested2': dict({
        'children': dict({
          'Class4': dict({
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Nested3': dict({
        'children': dict({
          'ExtraNested': dict({
            'children': dict({
              'Class5': dict({
                'strict_super': tuple(
                ),
              }),
            }),
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
    }),
    'strict_super': tuple(
      'multi_module_composition.Module1',
      'multi_module_composition.Module2Diamond',
    ),
  })
# ---
# name: TestMultiModuleCompositionSnapshot.test_module3_flat_symbol_tree
  dict({
    'children': dict({
      'Class1': dict({
        'strict_super': tuple(
        ),
      }),
      'Class2': dict({
        'strict_super': tuple(
        ),
      }),
      'Class3': dict({
        'strict_super': tuple(
        ),
      }),
      'Class4': dict({
        'strict_super': tuple(
        ),
      }),
    }),
    'strict_super': tuple(
      'multi_module_composition.Module1',
      'multi_module_composition.Module2Flat',
    ),
  })
# ---
# name: TestMultiModuleCompositionSnapshot.test_module3_symbol_tree
  dict({
    'children': dict({
      'Class1': dict({
        'strict_super': tuple(
        ),
      }),
      'Class2': dict({
        'strict_super': tuple(
        ),
      }),
      'Nested1': dict({
        'children': dict({
          'Class3': dict({
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Nested2': dict({
        'children': dict({
          'Class4': dict({
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
    }),
    'strict_super': tuple(
      'multi_module_composition.Module1',
      'multi_module_composition.Module2',
    ),
  })
# ---
# name: TestMyRootFlatten.test_my_root_symbol_tree[my_root_symbol_tree]
  dict({
    'children': dict({
      'Flatten': dict({
        'children': dict({
          'ReferenceToTarget': dict({
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
          'multi_module_composition.MyRoot.Nested1.Nested3',
        ),
      }),
      'Nested1': dict({
        'children': dict({
          'Nested3': dict({
            'children': dict({
              'ReferenceToTarget': dict({
                'strict_super': tuple(
                ),
              }),
            }),
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
          'multi_module_composition.MyRoot.Nested2',
          'multi_module_composition.MyRoot.Nested4',
        ),
      }),
      'Nested2': dict({
        'children': dict({
          'Nested3': dict({
            'children': dict({
              'ReferenceToTarget': dict({
                'strict_super': tuple(
                  'multi_module_composition.MyRoot.Target',
                ),
              }),
            }),
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Nested4': dict({
        'children': dict({
          'Nested3': dict({
            'children': dict({
              'ReferenceToTarget': dict({
                'strict_super': tuple(
                  'multi_module_composition.MyRoot.Target2',
                ),
              }),
            }),
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Target': dict({
        'strict_super': tuple(
        ),
      }),
      'Target2': dict({
        'strict_super': tuple(
        ),
      }),
    }),
    'strict_super': tuple(
    ),
  })
# ---
# name: TestMyRootFlatten.test_reroot_symbol_tree[reroot_symbol_tree]
  dict({
    'children': dict({
      'Flatten': dict({
        'strict_super': tuple(
        ),
      }),
      'Nested1': dict({
        'strict_super': tuple(
        ),
      }),
      'Nested2': dict({
        'children': dict({
          'Nested3': dict({
            'children': dict({
              'ReferenceToTarget': dict({
                'strict_super': tuple(
                ),
              }),
            }),
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Nested4': dict({
        'children': dict({
          'Nested3': dict({
            'children': dict({
              'ReferenceToTarget': dict({
                'strict_super': tuple(
                ),
              }),
            }),
            'strict_super': tuple(
            ),
          }),
        }),
        'strict_super': tuple(
        ),
      }),
      'Target': dict({
        'strict_super': tuple(
        ),
      }),
      'Target2': dict({
        'strict_super': tuple(
        ),
      }),
    }),
    'strict_super': tuple(
      'multi_module_composition.MyRoot',
    ),
  })
# ---
